fixed spacing on phone

--- a/css/index.css
+++ b/css/index.css
@@ -474,6 +474,38 @@ form .btn2{
 
 /*------- Media Queries -------*/
 
+
+@media(max-width: 1100px){
+  .navlist a{
+    font-size: 20px !important;
+  }
+
+  .logo{
+    font-size:60px !important;
+  }
+}
+
+@media(max-width: 830px){
+  .navlist a{
+    font-size: 15px !important;
+  }
+
+  .logo{
+    font-size:40px !important;
+  }
+}
+
+@media(max-width: 680px){
+  .navlist a{
+    font-size: 15px !important;
+  }
+
+  .logo{
+    font-size:30px !important;
+  }
+}
+
+
 @media screen and (max-width: 630px) {
   .navlist a:not(:first-child) {
     display: none;
@@ -1181,7 +1213,7 @@ form .btn2{
 }
 @media(max-height: 2500px){
   .contact h2{
-    padding-top: 250px;
+    padding-top: 110px;
   }
   .projects h2{
     padding-top: 250px;
@@ -1246,6 +1278,14 @@ form .btn2{
 
   .contact-below form {
     margin-top: 92px;
+  }
+
+  .logo{
+    font-size: 80px;
+  }
+
+  .navlist a{
+    font-size: 30px;
   }
 
   /*.home{*/
